<resources>
    <string name="app_name">proyectoIDNP</string>
    <string name="menu_musica">Música</string>
    <string name="menu_estadistica">Estadística</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_iniciar">Iniciar</string>
    <string name="menu_historial">Historial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="login">Iniciar Sesion</string>
    <string name="register">Registrarse</string>
    <string name="register_title">REGISTRO</string>
    <string name="register_cancelar">CANCELAR</string>
    <string name="register_nombre">NOMBRE</string>
    <string name="rb1">Correr</string>
    <string name="rb2">Caminar</string>
    <string name="rb3">Andar en bicicleta</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
</resources>