<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/inicio"
        android:layout_width="93dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/register_title" />
    <EditText
        android:id="@+id/register_name"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_below="@+id/inicio"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="51dp"
        android:autofillHints="no"
        android:hint="@string/register_nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_below="@+id/register_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="no"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_below="@+id/register_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="49dp"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_register_cancelar"
        android:layout_width="139dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/btn_register_register"
        android:background="@drawable/boton_general"
        android:text="@string/register_cancelar"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="139dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boton_general"
        android:text="@string/register"
        android:textColor="#FFFFFF" />

</RelativeLayout>
