<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.entrenamiento.entrenamiento">

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/box"
        android:text="Iniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="48dp"
        android:text="Entrenamiento"
        android:textColor="#5F9FFF"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/runtastic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="Seleccione la actividad a realizar:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="299dp"
        android:layout_height="99dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rb_caminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_correr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_bicicleta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3"
            android:textSize="20sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>